package com.example.decisiontree;

public interface Node {
    boolean isDecisionNode();

    boolean isLeafNode();
}
