package com.example.decisiontree;

public interface Result {
}
